@@ -1,4 +1,5 @@
 3.0.11
+ * Add vm.max_map_count StartupCheck (CASSANDRA-13008)
  * Hint related logging should include the IP address of the destination in addition to 
    host ID (CASSANDRA-13205)
  * Reloading logback.xml does not work (CASSANDRA-13173)
